--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@ricky0123/vad-web": "^0.0.28",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
